adding footer, header and view

--- a/src/assets/scss/cmps/_app-header.scss
+++ b/src/assets/scss/cmps/_app-header.scss
@@ -1,3 +1,9 @@
 .app-header {
-    
+    .app-nav{
+        gap: 10px;
+    }
+    .header-logo{
+        width: 40px;
+        height: 40px;
+    }
 }
