--- a/src/assets/scss/cmps/app-footer.scss
+++ b/src/assets/scss/cmps/app-footer.scss
@@ -1,3 +1,9 @@
 footer{
-    background-color: gold;
+    background-color: $clr0;
+    color: $clr6;
+}
+
+.contact-me{
+    background-color: $clr4;
+    color: $clr5;
 }
