--- a/src/assets/scss/basics/_base.scss
+++ b/src/assets/scss/basics/_base.scss
@@ -10,14 +10,21 @@ html {
 
 body {
     width: 100%;
-    color: white;
-    background-color: #0f1921;
+    color: $clr4;
+    background-color: $clr6;
     margin: 0;
     min-height: 100vh;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
         "Droid Sans", "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+.app-view{
+    min-height: calc(100vh - 202px);
+    div{
+        text-align: center;
+    }
 }
 
 img {
