--- a/src/assets/scss/basics/_helpers.scss
+++ b/src/assets/scss/basics/_helpers.scss
@@ -20,6 +20,10 @@
     > *.full-grow { flex: 1; }
 }
 
+.grid{
+    display: grid;
+}
+
 .text-center { text-align: center; }
 .text-right { text-align: right; }
 .text-left { text-align: left; }
