--- a/src/assets/scss/setup/_variables.scss
+++ b/src/assets/scss/setup/_variables.scss
@@ -1,9 +1,13 @@
 // Colors
-$clr1: #e01e5a;
-$clr2: #293241;
-$clr3: #5c3fc5;
-$clr4: #696969;
-$clr5: #e6e9ec;
+
+$clr0: #101010;
+$clr1: #008071;
+$clr2: #004f46;
+$clr3: #383637;
+$clr4: #1e2d41;
+$clr5: #cbe6e4;
+$clr6: #ffffff;
+
 
 $navHeight: 65px;
 
