adding backend architecture img to My-solution

--- a/src/assets/scss/basics/_base.scss
+++ b/src/assets/scss/basics/_base.scss
@@ -22,7 +22,7 @@ body {
 
 .app-view{
     min-height: calc(100vh - 202px);
-    padding-top: 0 !important;
+    padding-top: 20px;
     div{
         text-align: center;
     }
