--- a/src/assets/scss/views/home.scss
+++ b/src/assets/scss/views/home.scss
@@ -1,8 +1,13 @@
+
+
 .home-img{
     justify-self: center;
     margin-bottom: 20px;
 }
 .home-explain{
+    >h1{
+        text-align: center;
+    }
     >*{
         margin-bottom: 10px;
     }
