--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -14,6 +14,7 @@
 // Views
 @import "views/home";
 @import "views/dashboards";
+@import "views/my-solution";
 // Components
 @import "cmps/app-footer";
 @import "cmps/app-header";
