adding user nav

--- a/src/assets/scss/cmps/_app-header.scss
+++ b/src/assets/scss/cmps/_app-header.scss
@@ -53,6 +53,9 @@ header{
         display: flex;
         align-content: center;
         flex-wrap: wrap;
-    }
-    
+    }   
+}
+
+.user-nav{
+    position: absolute; 
 }
